@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Dec 2014; Harold Naparst <harold@alum.mit.edu> keymanager-0.3.8.ebuild:
+  Updated dependencies for keymanager
+
 *keymanager-0.3.8 (02 Dec 2014)
 
   02 Dec 2014; Harold Naparst <harold@alum.mit.edu> +keymanager-0.3.8.ebuild,
